Added generator blocks in favour of old hacked logic